Fixed baseline CNN, removed old code, addded default run func

--- a/configurations/general.conf
+++ b/configurations/general.conf
@@ -1,14 +1,13 @@
 # required arguments
 trained_model_path = ./trained_models
 save_trained = True
-model_name = simple
 epochs = 4
 batch_size = 128
 
 ## optional argumements
 # seed =
 # save_trained =
-# debug = True
+debug = True
 # print_time =
 # load = 1
 log_interval = 1
