--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
 *.pyc
 **/\.idea/
 
-capsule_pytorch/mnist/**
+
 capsule_pytorch/logs/**
+capsule_pytorch/mnist/**
+capsule_pytorch/cifar10/**
 
 capsule_example/**
 
 sandbox/
+trained_models/
+
+cifar10/cifar-10-batches-py/batches\.meta
+
+cifar10/cifar-10-batches-py/data_batch_1
+
+cifar10/cifar-10-batches-py/data_batch_2
+
+cifar10/cifar-10-batches-py/data_batch_3
+
+cifar10/cifar-10-batches-py/data_batch_4
+
+cifar10/cifar-10-batches-py/data_batch_5
+
+cifar10/cifar-10-batches-py/readme\.html
+
+cifar10/cifar-10-batches-py/test_batch
+
+cifar10/cifar-10-python\.tar\.gz
