change project s.t. same as working pytorch  and softmax over j

--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -5,9 +5,11 @@ epochs = 10
 batch_size = 128
 drop_last = True
 
-#debug = True
+debug = True
+seed = 42
 #print_time = True
 log_interval = 1
+#shuffle = False
 
 # load = simple_caps_net
 # log_file =
