added stdev as parameter

--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -5,6 +5,7 @@ m_min = 0.1
 prim_caps = 32
 routing_iters = 3
 dataset = mnist
+stdev_W = 0.1
 
 squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way beter
 softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
