--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -4,12 +4,12 @@ save_trained = True
 epochs = 10
 batch_size = 128
 drop_last = True
-
-#debug = True
+shuffle = True
 seed = 42
-#print_time = True
+
+debug = True
+print_time = True
 log_interval = 1
-#shuffle = False
 
 # load = simple_caps_net
 # log_file =
