Added SmallNORB dataseet (now for real)

--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -3,10 +3,12 @@ alpha = 0.0005
 m_plus = 0.9
 m_min = 0.1
 prim_caps = 32
-routing_iters = 1
-dataset = mnist
+routing_iters = 3
+dataset = smallnorb
 stdev_W = 0.1
 bias_routing = True
 
 squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way beter
 softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
+
+excessive_testing = False
