config parse bool

--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -1,12 +1,19 @@
-# required arguments
+# saving
 trained_model_path = ../trained_models
 save_trained = True
+load_name = None
+load_model = False
+
+# batch related
 epochs = 4
 batch_size = 128
-log_interval = 100
 drop_last = True
-
 shuffle = True
 seed = 42
+debug = False
+
+# logging
+print_time = True
+log_file = False
+log_file_name = None
 log_interval = 100
-    
