--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -1,15 +1,21 @@
-# required arguments
+# saving
 trained_model_path = ./trained_models
 save_trained = True
-epochs = 3
+load_name = None
+load_model = False
+
+# data related
+epochs = 1
 batch_size = 128
 drop_last = True
 shuffle = True
 seed = 42
-
 debug = True
+
+# logging
 print_time = True
+log_file = False
+log_file_name = None
 log_interval = 1
 
-# load = simple_caps_net
-# log_file =
+
