--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -1,14 +1,21 @@
-# alpha = 0.025
+# margin loss
 alpha = 0.0005
 m_plus = 0.9
 m_min = 0.1
-prim_caps = 32
-routing_iters = 3
-dataset = smallnorb
-stdev_W = 0.1
-bias_routing = True
 
+# routing
 squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way beter
 softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
-
+bias_routing = True
 excessive_testing = False
+routing_iters = 3
+bias_routing = False
+
+prim_caps = 32
+dataset = mnist
+stdev_W = 0.1
+excessive_testing = False
+model_name = simple_caps_net
+
+
+
