--- a/configurations/toy_capsnet.conf
+++ b/configurations/toy_capsnet.conf
@@ -1,9 +1,20 @@
-alpha = 0.025
+# margin loss
+alpha = 0.0005
 m_plus = 0.9
 m_min = 0.1
-prim_caps = 32
+
+# routing
+squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way beter
+softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
+bias_routing = True
+excessive_testing = False
 routing_iters = 3
 
-bias_routing = True
+prim_caps = 32
+dataset = mnist
+stdev_W = 0.1
 
 model_name = toy_routing_logs
+
+
+
