see prev commit

--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -3,6 +3,7 @@ trained_model_path = ../trained_models
 save_trained = True
 load_name = None
 load_model = False
+n_saved = 2
 
 # batch related
 epochs = 4
@@ -17,3 +18,10 @@ print_time = True
 log_file = False
 log_file_name = None
 log_interval = 100
+
+# plotting
+plot_train_progress = True
+plot_eval_acc = True
+
+# training
+early_stop = True
