--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -1,11 +1,12 @@
 # saving
 trained_model_path = ./trained_models
 save_trained = True
-load_name = None
+load_name = simple_caps_net_cuda2
 load_model = False
+n_saved = 2
 
 # data related
-epochs = 1
+epochs = 10
 batch_size = 128
 drop_last = True
 shuffle = True
@@ -17,5 +18,12 @@ print_time = True
 log_file = False
 log_file_name = None
 log_interval = 1
+
+# plotting
+plot_train_progress = True
+plot_eval_acc = True
+
+# training
+early_stop = True
 
 
