Bug fixing. Validation plot still errors

--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -17,13 +17,12 @@ debug = True
 print_time = True
 log_file = False
 log_file_name = None
-log_interval = 1
 
 # plotting
 plot_train_progress = True
 plot_eval_acc = True
 
 # training
-early_stop = True
+early_stop = False
 
 
