--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -10,13 +10,18 @@ bias_routing = True
 excessive_testing = False
 routing_iters = 3
 bias_routing = False
+sparse_threshold = 0.0999
+sparsify = True
+track_mask_rato = True
+
 
 prim_caps = 32
 dataset = mnist
 stdev_W = 0.1
-excessive_testing = False
+excessive_testing = True
+
 model_name = simple_caps_net
 
-track_mask_rato = True
+
 
 
