Rewriten default_run  train process as Trainer class
This class gives much cleaner code: the train modules are much smaller. This allows to specifies the models in colab itself for quick sets with the architecture.

--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -9,11 +9,12 @@ softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
 bias_routing = True
 excessive_testing = False
 routing_iters = 3
-bias_routing = False
+bias_routing = True
 sparse_threshold = 0.0999
-sparsify = True
-track_mask_rato = True
+sparsify = False
 
+plot_mask_rato = True
+plot_deviations = True
 
 prim_caps = 32
 dataset = mnist
