--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -3,7 +3,7 @@ trained_model_path = ../trained_models
 save_trained = True
 load_name = None
 load_model = False
-n_saved = 2
+n_saved = 1
 
 # batch related
 epochs = 4
@@ -14,7 +14,7 @@ seed = 42
 debug = False
 
 # logging
-print_time = True
+print_time = False
 log_file = False
 log_file_name = None
 
@@ -23,4 +23,5 @@ plot_train_progress = True
 plot_eval_acc = True
 
 # training
-early_stop = True
+early_stop = False
+cudnn_benchmark = True
