uncommit changes from ubuntu 17

--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -1,5 +1,5 @@
 # saving
-trained_model_path = ../trained_models
+trained_model_path = ./trained_models
 save_trained = True
 load_name = None
 load_model = False
