before fixing sparsify

--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -6,7 +6,7 @@ load_model = False
 n_saved = 1
 
 # batch related
-epochs = 4
+epochs = 10
 batch_size = 128
 drop_last = True
 shuffle = True
@@ -14,7 +14,7 @@ seed = 42
 debug = False
 
 # logging
-print_time = False
+print_time = True
 log_file = False
 log_file_name = None
 
