Added sparsity edges, entropy
Somehow sparsity nodes is also not working anymore.

--- a/configurations/exp_capsnet.conf
+++ b/configurations/exp_capsnet.conf
@@ -9,18 +9,15 @@ softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
 excessive_testing = False
 routing_iters = 3
 bias_routing = True
-sparse_threshold = 0.09999
-sparsify = True
-
-plot_mask_rato = True
-plot_deviations = True
+sparse_threshold = 0.099999
+sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk
 
 prim_caps = 32
 dataset = fashionmnist
 stdev_W = 0.1
 excessive_testing = True
 
-model_name = exp_caps_net
+model_name = exp_caps_net_new
 
 
 
