--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -10,14 +10,13 @@ excessive_testing = False
 routing_iters = 3
 bias_routing = True
 sparse_threshold = 0.0999
-sparsify = True
+sparsify = nodes_threshold # options: None, nodes_threshold, edges_threshold, edges_topk
+sparse_topk = 0.1;0.3
 
-plot_mask_rato = True
-plot_deviations = True
 
 prim_caps = 32
-dataset = fashionmnist
-stdev_W = 1
+dataset = mnist
+stdev_W = 0.1
 excessive_testing = True
 
 model_name = simple_caps_net
