Back up commit. Working sparse
With the settings I achieve good results with the double capsnet while sparsifying. Debugged multiple times. Interestingly delete the high values does not change the results.

--- a/configurations/exp_capsnet.conf
+++ b/configurations/exp_capsnet.conf
@@ -16,7 +16,7 @@ plot_mask_rato = True
 plot_deviations = True
 
 prim_caps = 32
-dataset = fashionmnist
+dataset = mnist
 stdev_W = 0.1
 excessive_testing = True
 
