--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -9,15 +9,15 @@ softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
 excessive_testing = False
 routing_iters = 3
 bias_routing = True
-sparse_threshold = 0.0999
+sparse_threshold = 0.09999
 sparsify = True
 
 plot_mask_rato = True
 plot_deviations = True
 
 prim_caps = 32
-dataset = fashionmnist
-stdev_W = 1
+dataset = mnist
+stdev_W = 0.1
 excessive_testing = True
 
 model_name = simple_caps_net
