--- a/configurations/exp_capsnet.conf
+++ b/configurations/exp_capsnet.conf
@@ -9,16 +9,15 @@ softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
 excessive_testing = False
 routing_iters = 3
 bias_routing = True
-sparse_threshold = 0.099999
+sparse_threshold = 0.09999
 sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk
+sparse_topk = 0.1;0.3
+
 
 prim_caps = 32
-dataset = fashionmnist
+dataset = mnist
 stdev_W = 0.1
 excessive_testing = True
 
 model_name = exp_caps_net_new
-
-
-
 
