--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -4,9 +4,10 @@ save_trained = True
 load_name = None
 load_model = False
 n_saved = 1
+visdom_path = ./visdom
 
 # batch related
-epochs = 10
+epochs = 7
 batch_size = 128
 drop_last = True
 shuffle = True
@@ -22,4 +23,5 @@ log_file_name = None
 early_stop = False
 cudnn_benchmark = True
 
-use_visdom = False
+start_visdom = True
+use_visdom = True
