--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -10,7 +10,7 @@ excessive_testing = False
 routing_iters = 3
 bias_routing = True
 sparse_threshold = 0.09995
-sparsify = nodes_threshold # options: None, nodes_threshold, edges_threshold, edges_topk
+sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk
 sparse_topk = 0.1;0.3
 
 
