--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -4,6 +4,7 @@ save_trained = True
 load_name = simple_caps_net_cuda2
 load_model = False
 n_saved = 2
+visdom_path = ./visdom
 
 # data related
 epochs = 10
@@ -22,4 +23,5 @@ log_file_name = None
 early_stop = False
 cudnn_benchmark = True  # 13% speedup for basiccapsnet on cuda
 
-use_visdom = False
+start_visdom = False
+use_visdom = True
