--- a/configurations/basic_capsnet.conf
+++ b/configurations/basic_capsnet.conf
@@ -8,16 +8,16 @@ squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way
 softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
 excessive_testing = False
 routing_iters = 3
-bias_routing = True
+bias_routing = False
 sparse_threshold = 0.09995
 sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk
 sparse_topk = 0.1;0.3
 
 
-prim_caps = 32
-dataset = mnist
+prim_caps = 8
+dataset = cifar10
 stdev_W = 0.1
-excessive_testing = True
+excessive_testing = False
 
 model_name = simple_caps_net
 
