--- a/configurations/exp_capsnet.conf
+++ b/configurations/exp_capsnet.conf
@@ -10,14 +10,14 @@ excessive_testing = False
 routing_iters = 3
 bias_routing = True
 sparse_threshold = 0.09999
-sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
+sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
 sparse_topk = 0.1;0.3
+hidden_capsules = 10
 
-
-prim_caps = 32
+prim_caps = 2
 dataset = mnist
 stdev_W = 0.1
 excessive_testing = False
 
-model_name = exp_test
+model_name = test
 
