--- a/configurations/general_local.conf
+++ b/configurations/general_local.conf
@@ -5,6 +5,8 @@ load_name = simple_caps_net_cuda2
 load_model = False
 n_saved = 2
 visdom_path = ./visdom
+save_best = True
+score_file_name = best_acc
 
 # data related
 epochs = 10
@@ -24,4 +26,6 @@ early_stop = False
 cudnn_benchmark = True  # 13% speedup for basiccapsnet on cuda
 
 start_visdom = False
-use_visdom = True
+use_visdom = False
+
+valid_size = 0.1
