--- a/configurations/general_cuda.conf
+++ b/configurations/general_cuda.conf
@@ -1,13 +1,15 @@
 # saving
 trained_model_path = ./trained_models
-save_trained = True
+save_trained = False
 load_name = None
 load_model = False
 n_saved = 1
 visdom_path = ./visdom
+save_best = True
+score_file_name = best_acc
 
 # batch related
-epochs = 7
+epochs = 2
 batch_size = 128
 drop_last = True
 shuffle = True
@@ -23,5 +25,7 @@ log_file_name = None
 early_stop = False
 cudnn_benchmark = True
 
-start_visdom = True
-use_visdom = True
+start_visdom = False
+use_visdom = False
+
+valid_size = 0.1
