still not working

--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -8,14 +8,14 @@ excessive_testing = False
 routing_iters = 3
 bias_routing = True
 sparse_threshold = 0.09999
-sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
+sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
 sparse_topk = 0.1;0.3
 
 dataset = mnist
 stdev_W = 0.1
 excessive_testing = False
 
-architecture = 2,8;10,8;10,16
+architecture = 32,8;10,16;10,16
 
 model_name = test
 
