--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -8,7 +8,7 @@ excessive_testing = False
 routing_iters = 3
 bias_routing = True
 sparse_threshold = 0.09999
-sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
+sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
 sparse_topk = 0.1;0.3
 
 dataset = mnist
