--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -6,7 +6,7 @@ m_min = 0.1
 # routing
 excessive_testing = False
 routing_iters = 3
-bias_routing = True
+bias_routing = False
 sparse_threshold = 0.09999
 sparsify = edges_topk # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
 sparse_topk = 0.1;0.3
@@ -15,7 +15,7 @@ dataset = mnist
 stdev_W = 0.1
 excessive_testing = False
 
-architecture = 32,8;10,16;10,16
+architecture = 2,8;10,16;10,16
 
 model_name = test
 
