--- a/configurations/general.conf
+++ b/configurations/general.conf
@@ -9,7 +9,7 @@ save_best = True
 score_file_name = best_acc
 
 # batch related
-epochs = 3
+epochs = 2
 batch_size = 128
 drop_last = True
 shuffle = True
@@ -28,6 +28,6 @@ early_stop = False
 cudnn_benchmark = True
 
 start_visdom = False
-use_visdom = False
+use_visdom = True
 
 valid_size = 0.1
