Fix save best and speed up  small bug

--- a/configurations/general.conf
+++ b/configurations/general.conf
@@ -9,12 +9,12 @@ save_best = True
 score_file_name = best_acc
 
 # batch related
-epochs = 2
+epochs = 3
 batch_size = 128
 drop_last = True
 shuffle = True
 seed = 42
-debug = False
+debug = True
 
 learning_rate = 0.001
 
@@ -28,6 +28,6 @@ early_stop = False
 cudnn_benchmark = True
 
 start_visdom = False
-use_visdom = True
+use_visdom = False
 
 valid_size = 0.1
