reorganised sparse methods

--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -9,15 +9,15 @@ beta = 0.1
 excessive_testing = False
 routing_iters = 3
 bias_routing = False
-sparse_threshold = 0.09999
-sparsify = None # options: None, nodes_threshold, edges_threshold, edges_topk, nodes_topk, edges_random
-sparse_topk = 0.0;0.8
+sparse_method = random # none, random, topk, sample
+sparse_target = edges # options:
+mask_percent = 0.3-0.3
 
 dataset = mnist
 stdev_W = 0.1
 excessive_testing = False
 
-architecture = 32,8;10,16;10,16
+architecture = 2,8;10,16;10,16
 use_recon = True
 
 
