Repair train toy + compute_pred fix

--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -1,5 +1,5 @@
 # margin loss
-use_recon = True    # use reconstruction in the loss
+use_recon = True    # use reconstruction in the loss, source code suggest no reconstruction for cifar10
 alpha = 0.0005      # recon scalar
 m_plus = 0.9        # presences factor
 m_min = 0.1         # absence factor
@@ -8,13 +8,13 @@ beta = 0.1          # entropy scalar
 
 # routing
 routing_iters = 3
-bias_routing = False
-sparse = nodes_topk_0.3-0.3+nodes_random_0.3-0.3  #note: first use nodes to have more fair percentage
+bias_routing = False    # source code has bias True
+sparse = none  #note: first use nodes to have more fair percentage
     #nodes_topk_0.3-0.3+nodes_random_0.3-0.3
 
 # network
 stdev_W = 0.1
-architecture = 32,8;10,16;10,16
+architecture = 32,8;10,16  #;10,16
 
 dataset = mnist
 model_name = test_caps
