--- a/configurations/toy_capsnet.conf
+++ b/configurations/toy_capsnet.conf
@@ -3,18 +3,19 @@ alpha = 0.0005
 m_plus = 0.9
 m_min = 0.1
 
-# routing
-squash_dim = 2  ### squash dim is supposed to be 2, but 1 seems too work way way beter
-softmax_dim =   1   ## dim is supposed to be 1, but 2 seems to work way better
-bias_routing = True
-excessive_testing = False
+epochs = 20
+
 routing_iters = 3
 
-prim_caps = 32
-dataset = mnist
-stdev_W = 0.1
+sparse = none
 
-model_name = toy_routing_logs
+use_recon = True
+data_dim = 3                   # dimensions of data (transformed gaussian samples)
+bias_routing = False
+
+output_folder = 2dgaussian        # folder in experiments folder
+output_file = test1               # name of the pickle file of routing points
+
 
 
 
