--- a/configurations/general.conf
+++ b/configurations/general.conf
@@ -14,7 +14,7 @@ batch_size = 128
 drop_last = True
 shuffle = True
 seed = 42
-debug = True
+debug = False
 valid_size = 0.1
 
 # logging
@@ -25,8 +25,7 @@ log_file_name = None
 # training
 early_stop = False
 cudnn_benchmark = True
-learning_rate = 0.001
-
+learning_rate = 0.001           # source code uses a exponential_decay, not an option in torch's Adam https://discuss.pytorch.org/t/adaptive-learning-rate/320/9
 
 start_visdom = True
 use_visdom = True
