Added additional comments and wrote readme

--- a/configurations/capsnet.conf
+++ b/configurations/capsnet.conf
@@ -9,12 +9,12 @@ beta = 0.01         # entropy scalar
 # routing
 routing_iters = 3
 bias_routing = False    # source code has bias True
-sparse = none  #note: first use nodes to have more fair percentage
+sparse = nodes_random_0.3-0.3  #note: first use nodes to have more fair percentage
     #nodes_topk_0.3-0.3+nodes_random_0.3-0.3
 
 # network
 stdev_W = 0.1
-architecture = 32,8;10,16;10,16
+architecture = 32,8;10,16;10,16;10,16
 
 dataset = mnist
 model_name = test_caps
