--- a/configurations/general.conf
+++ b/configurations/general.conf
@@ -27,6 +27,6 @@ early_stop = False
 cudnn_benchmark = True
 learning_rate = 0.001           # source code uses a exponential_decay, not an option in torch's Adam https://discuss.pytorch.org/t/adaptive-learning-rate/320/9
 
-start_visdom = True
+start_visdom = False
 use_visdom = True
 exp_name = test
